# tauri-ribh

./: .env  README.md  package.json  supabaseConfig.json  vite.config.ts
assets/locales/: i18n.ts
src/: Account.tsx  App.tsx  Auth.tsx  FormattedVerse.tsx  MainVerses.tsx  PingTestPage.tsx  UserContext.tsx  index.css  insertData.ts  main.tsx  supabaseClient.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/api/: checkAndRemoveOldData.ts  keyLesson.ts  lessonsPrefix.ts  loadLessons.ts  loadSourates.ts  settingsToRanges.ts
src/components/: ConfigModal.tsx  FormattedVerse.tsx  Header.tsx  HomeScreen.tsx  InitialScreen.tsx  Lesson.tsx  MainVerses.tsx  ProgressBar.tsx  ReusableModal.tsx  SourateBox.css  SourateBox.tsx  theme.ts
src/hooks/: CurrentScreenContext.tsx  flushStorage.ts  loadFromStore.ts  loadFromSupa.ts  removeFromStore.ts  supabaseClient.tsx  useCurrentIndexFromStorage.ts  useCurrentScreen.ts  useFetchChapterStats.ts  useFetchExercises.ts  useFetchLessons.ts  useFetchSourates.tsx  useFetchUser.ts  useFetchVerseStats.ts  useHandleSignOut.ts  useInitialSettings.ts  useSelectedSourateFromStorage.ts  useVerifiedUser.ts  writeToStore.ts
src/models/: Alternative.ts  AnswerStat.ts  HeaderProps.ts  Label.ts  LessonListProps.ts  LoginStackParamList.ts  MainStackParamList.ts  RootStackParamList.ts  ScrollableTabProps.ts  SimilarListProps.ts  Sourate.ts  Statement.ts  UngroupedText.ts  UserState.ts  Verse.ts  VerseListProps.ts  VerseOutput.ts
src/storage/: currentStorage.ts  handleLogout.ts  syncStorage.ts
(+21 files in other folders)
